--- a/circle.yml
+++ b/circle.yml
@@ -5,9 +5,10 @@ test:
   pre:
     #- mv behat.local.yml.sample behat.local.yml
   override:
-    - ./bin/drush sa
+    - drush sa
     - mkdir $CIRCLE_TEST_REPORTS/behat
     - ./bin/behat   
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
+    - echo $"export PATH=\$PATH:$(pwd)" >> ./bin
