--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "drush/drush": "^8.1",
+        "pantheon-systems/terminus": "^1.2",
         "kolev/multilingual-extension": "dev-master",
         "behat/environment-loader": "1.*",
         "beberlei/assert": "^2.7"
