--- a/circle.yml
+++ b/circle.yml
@@ -11,4 +11,4 @@ test:
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
-    - echo "pwd"
+    - pwd
