--- a/circle.yml
+++ b/circle.yml
@@ -1,14 +1,16 @@
 machine:
+  environment:
+    PATH: "$HOME/.composer/vendor/bin:$PATH"
   timezone:
     UTC
 test:
   pre:
     #- mv behat.local.yml.sample behat.local.yml
   override:
-    - ./bin/drush sa
+    - drush sa
     - mkdir $CIRCLE_TEST_REPORTS/behat
     - ./bin/behat   
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
-    - pwd
+    - composer global require drush/drush
