--- a/circle.yml
+++ b/circle.yml
@@ -14,3 +14,5 @@ dependencies:
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
     - composer global require drush/drush
+    - cd ~/.drush
+    - ls -ll
