--- a/circle.yml
+++ b/circle.yml
@@ -14,5 +14,5 @@ dependencies:
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
     - composer global require drush/drush
-    - cd $HOME/.composer/vendor/bin
+    - cd $HOME/.composer/vendor/bin/drush
     - ls -ll
