--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,5 @@ dependencies:
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
     - composer global require drush/drush
-    - ls -d $HOME/.composer/vendor/bin/drush/*/
+    - drush site-alias @igcommmerce --full --with-optional >> ~/.drush/igcommerce.aliases.drushrc.php
+    - ls -d ~/.drush/*/
