--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ dependencies:
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
     - composer global require drush/drush
-    - ls -d ~/.drush/*/
+    - ls -d $HOME/.composer/vendor/bin/*/
