--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,6 @@ dependencies:
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
     - composer global require drush/drush
+    - chmod -R 777 /home/ubuntu/.composer/vendor/bin
+    - cd /home/ubuntu/.composer/vendor/bin/drush; ls -ll;
     - ls -d $HOME/.composer/vendor/bin/*/
