--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ test:
     - drush sa
     - mkdir $CIRCLE_TEST_REPORTS/behat
     - ./bin/behat
-    - cd ~/ | more
+    - find
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
