--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 machine:
+  environment:
+    PATH: "$HOME/.composer/vendor/bin:$PATH"
   timezone:
     UTC
 test:
@@ -12,13 +14,5 @@ test:
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
-
-     # Install Drush.
     - composer global require drush/drush
-    - export PATH="$HOME/.composer/vendor/bin:$PATH"
-
-     # Install Terminus.
-    - git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
-    - composer update --no-dev
-    - drush cc drush
+    - composer global require pantheon-systems/terminus
