--- a/circle.yml
+++ b/circle.yml
@@ -13,5 +13,5 @@ test:
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
-    - curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
+    - composer global require pantheon-systems/terminus
     - composer global require drush/drush
