--- a/circle.yml
+++ b/circle.yml
@@ -14,3 +14,4 @@ dependencies:
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
     - composer global require drush/drush
+    - composer global require pantheon-systems/terminus
