--- a/circle.yml
+++ b/circle.yml
@@ -13,5 +13,16 @@ test:
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
-    - composer global require drush/drush
-    - composer global require pantheon-systems/terminus
+
+    # Install Drush.
+    - composer global require drush/drush:6.2.0
+    - export PATH="$HOME/.composer/vendor/bin:$PATH"
+ 
+    # Install Terminus.
+    - git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
+    - cd $HOME/.drush/terminus
+    - composer update --no-dev
+    - drush cc drush
+
+    # Getting site aliases ready for use.
+    - mv pantheon.aliases.drushrc.php ./.drush
