--- a/circle.yml
+++ b/circle.yml
@@ -27,4 +27,4 @@ dependencies:
     # Getting site aliases ready for use.
     - mv pantheon.aliases.drushrc.php ./.drush
 
-    - pwd
+    - pwd | ls -ll
