--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ test:
     #- mv behat.local.yml.sample behat.local.yml
   override:
     - drush sa
-    - mkdir $CIRCLE_TEST_REPORTS/behat
+    #- mkdir $CIRCLE_TEST_REPORTS/behat
     - ./bin/behat
 dependencies: 
   pre: 
@@ -19,10 +19,11 @@ dependencies:
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
  
     # Install Terminus.
-    - git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
-    - composer update --no-dev
-    - drush cc drush
+    #- git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
+    #- cd $HOME/.drush/terminus
+    #- composer update --no-dev
+    #- drush cc drush
+    - composer global require pantheon-systems/terminus
 
     # Getting site aliases ready for use.
     - mv pantheon.aliases.drushrc.php ./.drush
