--- a/circle.yml
+++ b/circle.yml
@@ -15,8 +15,7 @@ dependencies:
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
 
     # Install Drush.
-    - composer global require drush/drush:6.2.0
-    - export PATH="$HOME/.composer/vendor/bin:$PATH"
+    - composer global require drush/drush
  
     # Install Terminus.
     #- git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
