--- a/circle.yml
+++ b/circle.yml
@@ -18,10 +18,10 @@ dependencies:
  
     # Install Terminus.
     #- git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
+    #- cd $HOME/.drush/terminus
     - composer update --no-dev
     - drush cc drush
-    
+
     - composer global require pantheon-systems/terminus
 
     # Getting site aliases ready for use.
