--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ dependencies:
 
     # Install Drush.
     - composer global require drush/drush:6.2.0
+    - export PATH="$HOME/.composer/vendor/bin:$PATH"
  
     # Install Terminus.
     - git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
