--- a/circle.yml
+++ b/circle.yml
@@ -16,10 +16,9 @@ dependencies:
 
     # Install Drush.
     - composer global require drush/drush:6.2.0
-    - export PATH="$HOME/.composer/vendor/bin:$PATH"
- 
+
     # Install Terminus.
-    - git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
-    - composer update --no-dev
-    - drush cc drush
+    #- git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
+    #- cd $HOME/.drush/terminus
+    #- composer update --no-dev
+    #- drush cc drush
