--- a/circle.yml
+++ b/circle.yml
@@ -15,11 +15,11 @@ dependencies:
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
 
     # Install Drush.
-    - composer global require drush/drush:6.2.0
-    - export PATH="$HOME/.composer/vendor/bin:$PATH"
+    #- composer global require drush/drush:6.2.0
+    #- export PATH="$HOME/.composer/vendor/bin:$PATH"
  
     # Install Terminus.
-    - git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
-    - composer update --no-dev
-    - drush cc drush
+    #- git clone git@github.com:pantheon-systems/terminus.git $HOME/.drush/terminus
+    #- cd $HOME/.drush/terminus
+    #- composer update --no-dev
+    #- drush cc drush
