--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
-    "require-global": {
-        "drush/drush": "7.*",
-        "pantheon-systems/terminus": "^1.2",
+    "require": {
         "kolev/multilingual-extension": "dev-master",
         "behat/environment-loader": "1.*",
-        "beberlei/assert": "^2.7"
     },
     "require-dev": {
         "behat/behat": "^3.3",
@@ -14,7 +11,6 @@
         "behat/mink-browserkit-driver": "^1.3",
         "emuse/behat-html-formatter": "^0.1.0",
         "phpunit/phpunit": "^4.8",
-        "behat/symfony2-extension": "^2.1"
     },
     "autoload": {
     "psr-4": {
