--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "kolev/multilingual-extension": "dev-master",
-        "behat/environment-loader": "1.*",
+        "behat/environment-loader": "1.*"
     },
     "require-dev": {
         "behat/behat": "^3.3",
@@ -10,7 +10,7 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-browserkit-driver": "^1.3",
         "emuse/behat-html-formatter": "^0.1.0",
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
     "psr-4": {
