--- a/circle.yml
+++ b/circle.yml
@@ -17,8 +17,8 @@ dependencies:
     # Install Drush.
     - composer global require drush/drush:7.*
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
-    
+
  
     # Install Terminus.
-    #- composer global require pantheon-systems/terminus
+    - composer global require pantheon-systems/terminus
     
