--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,6 @@ test:
   override:
     #- mkdir $CIRCLE_TEST_REPORTS/behat
     - ./bin/behat
-    - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
@@ -21,4 +20,14 @@ dependencies:
  
     # Install Terminus.
     - composer global require pantheon-systems/terminus
+
+    # Install Chrome driver
+    - curl http://chromedriver.storage.googleapis.com/2.23/chromedriver_linux64.zip | gzip -dc > chromedriver
+    - chmod +x chromedriver
+
+    # Install Selenium
+    - curl http://selenium-release.storage.googleapis.com/2.53/selenium-server-standalone-2.53.1.jar > selenium-server-standalone.jar
+    - 'java -jar selenium-server-standalone.jar -trustAllSSLCertificates -Dwebdriver.chrome.driver=chromedriver':
+        background: true
     
+    - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
