--- a/circle.yml
+++ b/circle.yml
@@ -21,13 +21,12 @@ dependencies:
     # Install Terminus.
     - composer global require pantheon-systems/terminus
 
+    - composer global require drush-ops/behat-drush-endpoint
+    - composer global require drupal/drupal-driver 
+
     # Install Chrome driver
     - curl http://chromedriver.storage.googleapis.com/2.23/chromedriver_linux64.zip | gzip -dc > chromedriver
     - chmod +x chromedriver
-
-    # Install Selenium
-    - curl http://selenium-release.storage.googleapis.com/2.53/selenium-server-standalone-2.53.1.jar > selenium-server-standalone.jar
-    - 'java -jar selenium-server-standalone.jar -trustAllSSLCertificates -Dwebdriver.chrome.driver=chromedriver':
-        background: true
+    - ./chromedriver
     
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
