--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-browserkit-driver": "^1.3",
         "emuse/behat-html-formatter": "^0.1.0",
-        "phpunit/phpunit": "^4.8",
-        "drush-ops/behat-drush-endpoint": "*",
-        "drupal/drupal-driver": "dev-master"
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
     "psr-4": {
