--- a/circle.yml
+++ b/circle.yml
@@ -30,7 +30,8 @@ dependencies:
 
     # Install Selenium
     - curl http://selenium-release.storage.googleapis.com/3.3/selenium-server-standalone-3.3.1.jar > selenium-server-standalone.jar
-    - 'java -jar selenium-server-standalone.jar -trustAllSSLCertificates -Dwebdriver.chrome.driver=chromedriver':background: true
+    - java -jar selenium-server-standalone.jar -trustAllSSLCertificates -Dwebdriver.chrome.driver=chromedriver:
+        background: true
     
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
 
