--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ dependencies:
     - composer global require pantheon-systems/terminus
 
     #- composer global require drush-ops/behat-drush-endpoint
-    - composer global require drupal/drupal-driver 
+    #- composer global require drupal/drupal-driver 
 
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
 
