--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "kolev/multilingual-extension": "dev-master",
-        "behat/environment-loader": "1.*"
+        "behat/environment-loader": "1.*",
+        "drupal/drupal-driver": "~1.0"
     },
     "require-dev": {
         "behat/behat": "^3.3",
