back to old settings

--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ dependencies:
 
  
     # Install Terminus.
-    - composer global require pantheon-systems/terminus
+    #- composer global require pantheon-systems/terminus
 
     #- composer global require drush-ops/behat-drush-endpoint
     #- composer global require drupal/drupal-driver 
