--- a/circle.yml
+++ b/circle.yml
@@ -8,18 +8,20 @@ test:
     #- mv behat.local.yml.sample behat.local.yml
   override:
     #- mkdir $CIRCLE_TEST_REPORTS/behat
-    - ./bin/behat
+    #- ./bin/behat
 dependencies: 
   pre: 
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
 
     # Install Drush.
-    - composer global require drush/drush:7.*
+    - composer global require drush/drush:6.2.0
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
- 
     # Install Terminus.
-    #- composer global require pantheon-systems/terminus
+    - git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
+    - cd $HOME/.drush/terminus
+    - composer update --no-dev
+    - drush cc drush
 
     #- composer global require drush-ops/behat-drush-endpoint
     #- composer global require drupal/drupal-driver 
