--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
 
     # Install Drush.
-    - composer global require drush/drush:6.2.0
+    - composer global require drush/drush:7.*
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
     # Install Terminus.
@@ -22,9 +22,5 @@ dependencies:
     - cd $HOME/.drush/terminus
     - composer update --no-dev
     - drush cc drush
-
-    #- composer global require drush-ops/behat-drush-endpoint
-    #- composer global require drupal/drupal-driver 
-
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
 
