--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
     "require": {
         "kolev/multilingual-extension": "dev-master",
         "behat/environment-loader": "1.*",
-        "drupal/drupal-driver": "~1.0"
-    },
-    "require-dev": {
+        "drupal/drupal-driver": "~1.0",
         "behat/behat": "^3.3",
+        "drush/drush": "8.*"
+    },
+    "require-dev": {        
         "behat/mink": "^1.7",
         "drupal/drupal-extension": "~3.0",
         "behat/mink-extension": "^2.2",
