--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,16 @@
 {
     "require": {
-        "kolev/multilingual-extension": "dev-master",
-        "behat/environment-loader": "1.*",
-        "drupal/drupal-driver": "~1.0",
-        "behat/behat": "^3.3",
-        "drush/drush": "8.*"
+        "drupal/coder": "^8.2",
+        "drush/drush": "8.*",
+        "drupal/drupal-extension": "*",
+        "behat/behat": "~3.1.0-rc2",
+        "symfony/dependency-injection": "~2.7",
+        "kolev/multilingual-extension": "^0.0.2"
     },
-    "require-dev": {        
+    "require-dev": {
         "behat/mink": "^1.7",
-        "drupal/drupal-extension": "~3.0",
         "behat/mink-extension": "^2.2",
-        "behat/mink-browserkit-driver": "^1.3",
         "emuse/behat-html-formatter": "^0.1.0",
-        "phpunit/phpunit": "^4.8"
-    },
-    "autoload": {
-    "psr-4": {
-      "kolev\\MultilingualExtension\\": "src/"
+        "behat/mink-browserkit-driver": "^1.3"
     }
-  },
-    "config": {
-        "bin-dir": "bin"
-    }
-}
+} 
