--- a/circle.yml
+++ b/circle.yml
@@ -15,12 +15,12 @@ dependencies:
 
     # Install Drush.
     #- composer global require drush/drush:7.*
-    #- export PATH="$HOME/.composer/vendor/bin:$PATH"
+    - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
     # Install Terminus.
-    - git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
-    - composer update --no-dev
-    - drush cc drush
+    #- git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
+    #- cd $HOME/.drush/terminus
+    #- composer update --no-dev
+    #- drush cc drush
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
 
