--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "require": {
-        "drupal/coder": "^8.2",
-        "drush/drush": "8.*",
-        "drupal/drupal-extension": "*",
-        "behat/behat": "~3.1.0-rc2",
         "symfony/dependency-injection": "~2.7",
+        "symfony/yaml": "2.3.0",
+        "drush/drush": "8.1.0",
+        "drupal/drupal-extension": "*",
+        "behat/behat": "^3.3",
         "kolev/multilingual-extension": "^0.0.2"
     },
     "require-dev": {
