--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,9 @@ dependencies:
     - echo "date.timezone = UTC" > /opt/circleci/php/$(phpenv global)/etc/conf.d/timezone.ini
 
     # Install Drush.
+    - composer global require symfony/yaml:2.3.0
+    - composer global require symfony/console:~2.7
+    - composer global require symfony/dependency-injection:~2.7
     - composer global require behat/behat:^3.3
     - composer global require drush/drush:8.1.0
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
