--- a/circle.yml
+++ b/circle.yml
@@ -22,9 +22,9 @@ dependencies:
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
     # Install Terminus.
-    #- git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
-    #- cd $HOME/.drush/terminus
+    - git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
+    - cd $HOME/.drush/terminus
     #- composer update --no-dev
-    #- drush cc drush
+    - drush cc drush
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
 
