--- a/circle.yml
+++ b/circle.yml
@@ -19,10 +19,11 @@ dependencies:
     - composer global require symfony/dependency-injection:~2.7
     - composer global require behat/behat:^3.3
     - composer global require drush/drush:8.1.0
+    - composer require pantheon-systems/terminus
 
     # Install Terminus.
-    - git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
-    - cd $HOME/.drush/terminus
+    #- git clone https://github.com/pantheon-systems/terminus.git $HOME/.drush/terminus
+    #- cd $HOME/.drush/terminus
     #- composer update --no-dev
     #- drush cc drush
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
