--- a/circle.yml
+++ b/circle.yml
@@ -32,6 +32,6 @@ dependencies:
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
-    - ./terminus ssh-key:add ~/.ssh/id_rsa.pub
+    - ./vendor/bin/terminus ssh-key:add ~/.ssh/id_rsa.pub
 
 
