--- a/circle.yml
+++ b/circle.yml
@@ -32,6 +32,7 @@ dependencies:
     - cp pantheon.aliases.drushrc.php /home/ubuntu/.drush
     - export PATH="$HOME/.composer/vendor/bin:$PATH"
 
+    - ./vendor/bin/terminus auth:login --machine-token=lmISIz92U13XM1zVEKivNYXxSmbMZtG-Z3U_4spxWpDVq
     - ./vendor/bin/terminus ssh-key:add ~/.ssh/id_rsa.pub
 
 
