--- a/behat.yml
+++ b/behat.yml
@@ -15,9 +15,9 @@ default:
       #browser_name: chrome
       base_url: 'http://aj-behat-igcommerce.pantheonsite.io'
       #base_url: 'http://www.igcommerce.local'
-    kolev\MultilingualExtension:
-      default_language: en-us
-      translations: translations.yml
+    #kolev\MultilingualExtension:
+      #default_language: en-us
+      #translations: translations.yml
     Drupal\DrupalExtension:
       blackbox: ~
       api_driver: 'drush'
